Add should-filters for event logs queries
